--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</head>
 
 		<body>
-			<aside class="">
+			<aside>
 				<header>
 					<figure>
 						<img src="photocv.png" alt="photo de Julien DUCROCQ"/>
