Meta tags partage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 
 			<link rel="stylesheet" href="style.css" />
 
+			<meta name="description" content="Page description. No longer than 155 characters." />
+
+			<!-- Twitter Card data -->
+			<meta name="twitter:card" content="Curriculum Vitae">
+			<meta name="twitter:site" content="dirmina.github.io">
+			<meta name="twitter:title" content="Julien Ducrocq Website">
+			<meta name="twitter:description" content="Julien Ducrocq : Développeur web">
+			<meta name="twitter:creator" content="@JujuDucr">
+			<!-- Twitter Summary card images must be at least 200x200px -->
+			<meta name="twitter:image" content="photocv.png">
+
+			<!-- Open Graph data -->
+			<meta property="og:title" content="Julien Ducrocq website" />
+			<meta property="og:type" content="website" />
+			<meta property="og:url" content="http://dirmina.github.io" />
+			<meta property="og:image" content="photocv.png" />
+			<meta property="og:description" content="Julien Ducrocq : Développeur web" /> 
+			<meta property="og:site_name" content="Dirmina" />
+			<meta property="fb:admins" content="100008202753841" />
+
 			
 
 			<script src="https://kit.fontawesome.com/da1309c327.js" crossorigin="anonymous"></script>
