mise à jour des meta keywords, last update et description

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 			<meta charset="utf-8" />
 			<meta name="author" content="Julien DUCROCQ" />
 			<meta name="initiale date" content="02.01.2020" />
-			<meta name="last update" content="07.01.2020" />
-			<meta name="keywords" content="html, css, julien ducrocq, CV, expérience, formations, portfolio, contact" />
+			<meta name="last update" content="06.02.2020" />
+			<meta name="keywords" content="julien ducrocq, CV, expérience, formations, portfolio, contact, web developer, developpeur web" />
 
 			<link rel="stylesheet" href="style.css" />
 
-			<meta name="description" content="Page description. No longer than 155 characters." />
+			<meta name="description" content="Site de Julien DUCROCQ. Développeur Web." />
 
 			<!-- Twitter Card data -->
 			<meta name="twitter:card" content="Curriculum Vitae">
@@ -28,6 +28,7 @@
 			<meta property="og:description" content="Julien Ducrocq : Développeur web" /> 
 			<meta property="og:site_name" content="Dirmina" />
 			<meta property="fb:admins" content="100008202753841" />
+			<meta property="fb:app-id" content="1446746102165055" />
 
 			
 
