changement de MQ : max-width: 767.98px et html fb

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<meta property="og:description" content="Julien Ducrocq : Développeur web" /> 
 			<meta property="og:site_name" content="Dirmina" />
 			<meta property="fb:admins" content="100008202753841" />
-			<meta property="fb:app-id" content="1446746102165055" />
+			<meta property="fb:app-id" content="1446746102165055" /> <!-- App fb ? -->
 
 			
 
