balises meta orphelines et url https

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 			<meta name="description" content="Site de Julien DUCROCQ. Développeur Web." />
 
 			<!-- Twitter Card data -->
-			<meta name="twitter:card" content="Curriculum Vitae">
-			<meta name="twitter:site" content="dirmina.github.io">
-			<meta name="twitter:title" content="Julien Ducrocq Website">
-			<meta name="twitter:description" content="Julien Ducrocq : Développeur web">
-			<meta name="twitter:creator" content="@JujuDucr">
+			<meta name="twitter:card" content="Curriculum Vitae" />
+			<meta name="twitter:site" content="https://dirmina.github.io" />
+			<meta name="twitter:title" content="Julien Ducrocq Website" />
+			<meta name="twitter:description" content="Julien Ducrocq : Développeur web" />
+			<meta name="twitter:creator" content="@JujuDucr" />
 			<!-- Twitter Summary card images must be at least 200x200px -->
 			<meta name="twitter:image" content="photocv.png">
 
 			<!-- Open Graph data -->
 			<meta property="og:title" content="Julien Ducrocq website" />
 			<meta property="og:type" content="website" />
-			<meta property="og:url" content="http://dirmina.github.io" />
+			<meta property="og:url" content="https://dirmina.github.io" />
 			<meta property="og:image" content="photocv.png" />
 			<meta property="og:description" content="Julien Ducrocq : Développeur web" /> 
 			<meta property="og:site_name" content="Dirmina" />
