ajout de classe responsive Contact et hardskills

--- a/index.html
+++ b/index.html
@@ -193,33 +193,33 @@
 				<section id="Competences">
 					<h2 class="section-title disco-font "><span class="fas fa-drafting-compass fa-lg section-icons"></span>COMPETENCES</h2>
 					<ul class="l-list-icons list-title-style color-title-content ">
-						<li class="l-list-icons-xs">
+						<li>
 								<span class="fab fa-html5 fa-5x section-icons"></span>
-								<h3>HTML5</h3>
+								<h3 class="hardskill-xs">HTML5</h3>
 						</li>
-						<li class="l-list-icons-xs">
+						<li>
 							<span class="fab fa-css3-alt fa-5x section-icons"></span>
-							<h3>CSS3</h3>
+							<h3 class="hardskill-xs">CSS3</h3>
 						</li>
-						<li class="l-list-icons-xs">
+						<li>
 							<span class="fab fa-js-square fa-5x section-icons"></span>
-							<h3>Javascript</h3>
+							<h3 class="hardskill-xs">Javascript</h3>
 						</li>
-						<li class="l-list-icons-xs">
+						<li>
 							<span class="fab fa-php fa-5x section-icons"></span>
-							<h3>PHP</h3>
+							<h3 class="hardskill-xs">PHP</h3>
 						</li>
-						<li class="l-list-icons-xs">
+						<li>
 							<span class="fas fa-database fa-5x section-icons"></span>
-							<h3>Base de données : SQL</h3>
+							<h3 class="hardskill-xs">Base de données : SQL</h3>
 						</li>
-						<li class="l-list-icons-xs">
+						<li>
 							<span class="fab fa-bootstrap fa-5x section-icons"></span>
-							<h3>Bootstrap 4</h3>
+							<h3 class="hardskill-xs">Bootstrap 4</h3>
 						</li>
-						<li class="l-list-icons-xs">
+						<li>
 							<span class="fab fa-adobe fa-5x section-icons"></span>
-							<h3>Indesign, Photoshop</h3>
+							<h3 class="hardskill-xs">Indesign, Photoshop</h3>
 						</li>
 					</ul>
 					<ul class="l-list-items l-items-softskills disco-font ">
@@ -242,7 +242,7 @@
 				<div class="is-hidden-md last-div-color-xs">
 				<section id="Contact-xs">
 						<h2 class="aside-title aside-contact-xs">CONTACT</h2>
-						<ul>
+						<ul class="contact-xs">
 							<li class="l-list-icons l-list-contact">	
 								<span class="fas fa-envelope-square fa-2x l-contact-icons aside-icons"></span>
 								<a href="maito:julducrocq@laposte.net" class="">julducrocq@laposte.net</a>
