ajout de marge interieures sur la main section

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						</ul>
 					</nav>
 				
-				<section id="Formations">
+				<section id="Formations" class="l-main-section-xs">
 					<h2 class="section-title disco-font"><span class="fas fa-graduation-cap fa-lg section-icons"></span> FORMATIONS</h2>
 					<ul class="fa-ul">
 						<li class="l-list-items">
@@ -165,7 +165,7 @@
 					</ul>
 				</section>
 
-				<section id="Experiences">
+				<section id="Experiences" class="l-main-section-xs">
 					<h2 class="section-title disco-font "><span class="fas fa-briefcase fa-lg section-icons "></span>EXPERIENCES</h2>
 					<ul class="fa-ul">
 						<li class="l-list-items">
@@ -190,7 +190,7 @@
 					</ul>
 				</section>
 
-				<section id="Competences">
+				<section id="Competences" class="l-main-section-xs">
 					<h2 class="section-title disco-font "><span class="fas fa-drafting-compass fa-lg section-icons"></span>COMPETENCES</h2>
 					<ul class="l-list-icons list-title-style color-title-content ">
 						<li>
