--- a/index.html
+++ b/index.html
@@ -195,31 +195,31 @@
 					<ul class="l-list-icons list-title-style color-title-content ">
 						<li>
 								<span class="fab fa-html5 fa-5x section-icons"></span>
-								<h3 class="hardskill-xs">HTML5</h3>
+								<h3 class="hardskills-hobbies-xs">HTML5</h3>
 						</li>
 						<li>
 							<span class="fab fa-css3-alt fa-5x section-icons"></span>
-							<h3 class="hardskill-xs">CSS3</h3>
+							<h3 class="hardskills-hobbies-xs">CSS3</h3>
 						</li>
 						<li>
 							<span class="fab fa-js-square fa-5x section-icons"></span>
-							<h3 class="hardskill-xs">Javascript</h3>
+							<h3 class="hardskills-hobbies-xs">Javascript</h3>
 						</li>
 						<li>
 							<span class="fab fa-php fa-5x section-icons"></span>
-							<h3 class="hardskill-xs">PHP</h3>
+							<h3 class="hardskills-hobbies-xs">PHP</h3>
 						</li>
 						<li>
 							<span class="fas fa-database fa-5x section-icons"></span>
-							<h3 class="hardskill-xs">Base de données : SQL</h3>
+							<h3 class="hardskills-hobbies-xs">Base de données : SQL</h3>
 						</li>
 						<li>
 							<span class="fab fa-bootstrap fa-5x section-icons"></span>
-							<h3 class="hardskill-xs">Bootstrap 4</h3>
+							<h3 class="hardskills-hobbies-xs">Bootstrap 4</h3>
 						</li>
 						<li>
 							<span class="fab fa-adobe fa-5x section-icons"></span>
-							<h3 class="hardskill-xs">Indesign, Photoshop</h3>
+							<h3 class="hardskills-hobbies-xs">Indesign, Photoshop</h3>
 						</li>
 					</ul>
 					<ul class="l-list-items l-items-softskills disco-font ">
@@ -267,16 +267,16 @@
 						<h2 class="aside-title">LOISIRS</h2>					
 							<ul  class="l-list-icons list-title-style test">
 								<li><span class="fas fa-gamepad fa-3x icons-circle aside-icons"></span>
-									<h3>Jeux-vidéo</h3>
+									<h3 class="hardskills-hobbies-xs">Jeux-vidéo</h3>
 								</li>
 							
 								<li>
 									<span class="fas fa-book-reader fa-3x icons-circle aside-icons"></span>
-									<h3>Lecture</h3>
+									<h3 class="hardskills-hobbies-xs">Lecture</h3>
 								</li>
 								<li>
 									<span class="fas fa-guitar fa-3x icons-circle aside-icons"></span>
-									<h3>Musique</h3>
+									<h3 class="hardskills-hobbies-xs">Musique</h3>
 								</li>
 							</ul>
 					</section>
