Phone list hardskills item padding left right

--- a/index.html
+++ b/index.html
@@ -193,31 +193,31 @@
 				<section id="Competences" class="l-main-section-xs">
 					<h2 class="section-title disco-font "><span class="fas fa-drafting-compass fa-lg section-icons"></span>COMPETENCES</h2>
 					<ul class="l-list-icons list-title-style color-title-content ">
-						<li>
+						<li class="l-hardskills-items-xs">
 								<span class="fab fa-html5 fa-5x section-icons"></span>
 								<h3 class="hardskills-hobbies-xs">HTML5</h3>
 						</li>
-						<li>
+						<li class="l-hardskills-items-xs">
 							<span class="fab fa-css3-alt fa-5x section-icons"></span>
 							<h3 class="hardskills-hobbies-xs">CSS3</h3>
 						</li>
-						<li>
+						<li class="l-hardskills-items-xs">
 							<span class="fab fa-js-square fa-5x section-icons"></span>
 							<h3 class="hardskills-hobbies-xs">Javascript</h3>
 						</li>
-						<li>
+						<li class="l-hardskills-items-xs">
 							<span class="fab fa-php fa-5x section-icons"></span>
 							<h3 class="hardskills-hobbies-xs">PHP</h3>
 						</li>
-						<li>
+						<li class="l-hardskills-items-xs">
 							<span class="fas fa-database fa-5x section-icons"></span>
 							<h3 class="hardskills-hobbies-xs">Base de données : SQL</h3>
 						</li>
-						<li>
+						<li class="l-hardskills-items-xs">
 							<span class="fab fa-bootstrap fa-5x section-icons"></span>
 							<h3 class="hardskills-hobbies-xs">Bootstrap 4</h3>
 						</li>
-						<li>
+						<li class="l-hardskills-items-xs">
 							<span class="fab fa-adobe fa-5x section-icons"></span>
 							<h3 class="hardskills-hobbies-xs">Indesign, Photoshop</h3>
 						</li>
