--- a/index.html
+++ b/index.html
@@ -194,31 +194,38 @@
 					<h2 class="section-title disco-font "><span class="fas fa-drafting-compass fa-lg section-icons"></span>COMPETENCES</h2>
 					<ul class="l-list-icons list-title-style color-title-content ">
 						<li class="l-hardskills-items-xs">
-								<span class="fab fa-html5 fa-5x section-icons"></span>
-								<h3 class="hardskills-hobbies-xs">HTML5</h3>
+							<div class="is-hidden-xs"><span class="fab fa-html5 fa-5x section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fab fa-html5 fa-3x section-icons "></span></div>
+							<h3 class="hardskills-hobbies-xs">HTML5</h3>
 						</li>
-						<li class="l-hardskills-items-xs">
-							<span class="fab fa-css3-alt fa-5x section-icons"></span>
+						<li class="l-hardskills-items-xs">					
+							<div class="is-hidden-xs"><span class="fab fa-css3-alt fa-5x section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fab fa-css3-alt fa-3x section-icons"></span></div>
 							<h3 class="hardskills-hobbies-xs">CSS3</h3>
 						</li>
-						<li class="l-hardskills-items-xs">
-							<span class="fab fa-js-square fa-5x section-icons"></span>
+						<li class="l-hardskills-items-xs">					
+							<div class="is-hidden-xs"><span class="fab fa-js-square fa-5x section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fab fa-js-square fa-3x section-icons"></span></div>
 							<h3 class="hardskills-hobbies-xs">Javascript</h3>
 						</li>
-						<li class="l-hardskills-items-xs">
-							<span class="fab fa-php fa-5x section-icons"></span>
+						<li class="l-hardskills-items-xs">						
+							<div class="is-hidden-xs"><span class="fab fa-php fa-5x section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fab fa-php fa-3x section-icons"></span></div>
 							<h3 class="hardskills-hobbies-xs">PHP</h3>
 						</li>
-						<li class="l-hardskills-items-xs">
-							<span class="fas fa-database fa-5x section-icons"></span>
+						<li class="l-hardskills-items-xs">						
+							<div class="is-hidden-xs"><span class="fas fa-database fa-5x section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fas fa-database fa-3x section-icons"></span></div>
 							<h3 class="hardskills-hobbies-xs">Base de données : SQL</h3>
 						</li>
-						<li class="l-hardskills-items-xs">
-							<span class="fab fa-bootstrap fa-5x section-icons"></span>
+						<li class="l-hardskills-items-xs">							
+							<div class="is-hidden-xs"><span class="fab fa-bootstrap fa-5x section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fab fa-bootstrap fa-3x section-icons"></span></div>
 							<h3 class="hardskills-hobbies-xs">Bootstrap 4</h3>
 						</li>
 						<li class="l-hardskills-items-xs">
-							<span class="fab fa-adobe fa-5x section-icons"></span>
+							<div class="is-hidden-xs"><span class="fab fa-adobe fa-5x section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fab fa-adobe fa-3x section-icons"></span></div>
 							<h3 class="hardskills-hobbies-xs">Indesign, Photoshop</h3>
 						</li>
 					</ul>
@@ -265,18 +272,18 @@
 
 					<section id="Loisirs-xs">
 						<h2 class="aside-title">LOISIRS</h2>					
-							<ul  class="l-list-icons list-title-style test">
+							<ul  class="l-list-icons list-title-style">
 								<li><span class="fas fa-gamepad fa-3x icons-circle aside-icons"></span>
-									<h3 class="hardskills-hobbies-xs">Jeux-vidéo</h3>
+									<h3>Jeux-vidéo</h3>
 								</li>
 							
 								<li>
 									<span class="fas fa-book-reader fa-3x icons-circle aside-icons"></span>
-									<h3 class="hardskills-hobbies-xs">Lecture</h3>
+									<h3>Lecture</h3>
 								</li>
 								<li>
 									<span class="fas fa-guitar fa-3x icons-circle aside-icons"></span>
-									<h3 class="hardskills-hobbies-xs">Musique</h3>
+									<h3>Musique</h3>
 								</li>
 							</ul>
 					</section>
