ajout des status Loisirs, phone : dot au milieu essai 1

--- a/index.html
+++ b/index.html
@@ -273,16 +273,20 @@
 					<section id="Loisirs-xs">
 						<h2 class="aside-title">LOISIRS</h2>					
 							<ul  class="l-list-icons list-title-style">
-								<li><span class="fas fa-gamepad fa-3x icons-circle aside-icons"></span>
+								<li>
+									<div class="is-hidden-xs"><span class="fas fa-gamepad fa-3x icons-circle aside-icons"></span></div>
+									<div class="is-hidden-md"><span class="fas fa-gamepad fa-2x icons-circle aside-icons"></span></div>
 									<h3>Jeux-vidéo</h3>
 								</li>
 							
 								<li>
-									<span class="fas fa-book-reader fa-3x icons-circle aside-icons"></span>
+									<div class="is-hidden-xs"><span class="fas fa-book-reader fa-3x icons-circle aside-icons"></span></div>
+									<div class="is-hidden-md"><span class="fas fa-book-reader fa-2x icons-circle aside-icons"></span></div>
 									<h3>Lecture</h3>
 								</li>
 								<li>
-									<span class="fas fa-guitar fa-3x icons-circle aside-icons"></span>
+									<div class="is-hidden-xs"><span class="fas fa-guitar fa-3x icons-circle aside-icons"></span></div>
+									<div class="is-hidden-md"><span class="fas fa-guitar fa-2x icons-circle aside-icons"></span></div>
 									<h3>Musique</h3>
 								</li>
 							</ul>
