--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<h2 class="section-title disco-font"><span class="fas fa-graduation-cap fa-lg section-icons"></span> FORMATIONS</h2>
 					<ul class="fa-ul">
 						<li class="l-list-items">
-							<p class="l-items-date"><span class="fa-li"><span class="far fa-dot-circle section-icons"></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="far fa-dot-circle section-icons l-dot-xs"></span></span>
 							Avril 2019-Aujourd'hui<br/> <em>A domicile</em></p>
 							<div class="l-items-content">
 								<h3 class='section-h section-h3 color-title-content'>Parcours OpenClassRooms Développeur Web</h3>
@@ -135,7 +135,7 @@
 						</li>
 
 						<li class="l-list-items">
-							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle section-icons size-icons-dot"></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle section-icons l-dot-xs size-icons-dot "></span></span>
 							2013-2014<br /><em> Tourcoing</em></p>
 							<div class="l-items-content">
 								<h3 class='section-h section-h3 color-title-content'>Musicien</h3>
@@ -145,7 +145,7 @@
 						</li>
 							
 						<li class="l-list-items">	
-							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle section-icons  size-icons-dot"></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle section-icons l-dot-xs size-icons-dot"></span></span>
 							2012-2013<br /><em>Tourcoing</em></p>
 							<div class="l-items-content">
 								<h3 class='section-h section-h3 color-title-content'>Prépa EF2M</h3> 
@@ -155,7 +155,7 @@
 						</li>
 
 						<li class="l-list-items">
-							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle section-icons size-icons-dot"></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle section-icons l-dot-xs size-icons-dot"></span></span>
 							2012<br /><em>Lille</em></p>
 							<div class="l-items-content">
 								<h3 class='section-h section-h3 color-title-content'>Baccalauréat Scientifique</h3>
@@ -169,7 +169,7 @@
 					<h2 class="section-title disco-font "><span class="fas fa-briefcase fa-lg section-icons "></span>EXPERIENCES</h2>
 					<ul class="fa-ul">
 						<li class="l-list-items">
-							<p class="l-items-date "><span class="fa-li"><span class="fas fa-circle section-icons  size-icons-dot"></span></span>
+							<p class="l-items-date "><span class="fa-li"><span class="fas fa-circle section-icons l-dot-xs size-icons-dot"></span></span>
 							Janvier 2016 - Août 2019<br /><em>Hazebrouck</em></p>
 							<div class="l-items-content">
 								<h3 class='section-h section-h3 color-title-content'>Assistant d’éducation</h3>
@@ -179,7 +179,7 @@
 						</li>
 
 						<li class="l-list-items">
-							<p  class="l-items-date"><span class="fa-li"><span class="fas fa-circle section-icons  size-icons-dot"></span></span>
+							<p  class="l-items-date"><span class="fa-li"><span class="fas fa-circle section-icons l-dot-xs size-icons-dot"></span></span>
 							Septembre 2012 - Février 2015<br /><em>Métropole Lilloise<br class="is-hidden-xs"/> et Hazebrouck</em></p>	
 							<div class="l-items-content">
 								<h3 class='section-h section-h3 color-title-content'>Professeur de guitare</h3>
