--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 						<img src="photocv.png" alt="photo de Julien DUCROCQ"/>
 					</figure>
 					<div class="is-hidden-md l-aside-header-div">
-						<h1 class="section-h section-header-h1"><strong>Julien</strong> DUCROCQ</h1>
-						<h2 class="section-h section-header-h2"><mark class="mark-xs">Web</mark> Developer</h2>
+						<h1 class="l-section-h section-header-h1"><strong>Julien</strong> DUCROCQ</h1>
+						<h2 class="l-section-h section-header-h2"><mark class="mark-xs">Web</mark> Developer</h2>
 					</div>
 				</header>
 
@@ -54,7 +54,7 @@
 					<ul>
 						<li class="l-list-icons l-list-contact">	
 							<span class="fas fa-envelope-square fa-2x l-contact-icons aside-icons"></span>
-							<a href="maito:julducrocq@laposte.net" class="">julducrocq@laposte.net</a>
+							<a href="maito:julducrocq@laposte.net">julducrocq@laposte.net</a>
 						</li>
 						<li  class="l-list-icons l-list-contact">
 							<span class="fas fa-map-marker-alt fa-2x l-contact-icons aside-icons"></span>
@@ -79,15 +79,15 @@
 				<section class="is-hidden-xs" id="Loisirs">
 					<h2 class="aside-title">LOISIRS</h2>					
 						<ul  class="l-list-icons list-title-style">
-							<li><span class="fas fa-gamepad fa-3x icons-circle aside-icons"></span>
+							<li><span class="fas fa-gamepad fa-2x icons-circle aside-icons"></span>
 								<h3>Jeux-vidéo</h3>
 							</li>
 							<li>
-								<span class="fas fa-book-reader fa-3x icons-circle aside-icons"></span>
+								<span class="fas fa-book-reader fa-2x icons-circle aside-icons"></span>
 								<h3>Lecture</h3>
 							</li>
 							<li>
-								<span class="fas fa-guitar fa-3x icons-circle aside-icons"></span>
+								<span class="fas fa-guitar fa-2x icons-circle aside-icons"></span>
 								<h3>Musique</h3>
 							</li>
 						</ul>
@@ -96,8 +96,8 @@
 
 			<section class="l-main-section">
 				<header class="l-header-section is-hidden-xs">
-					<h1 class="section-h section-header-h1"><strong>Julien</strong> DUCROCQ</h1>
-					<h2 class="section-h section-header-h2"><mark>Web</mark> Developer</h2>
+					<h1 class="l-section-h section-header-h1"><strong>Julien</strong> DUCROCQ</h1>
+					<h2 class="l-section-h section-header-h2"><mark>Dével</mark>oppeur web freelance</h2>
 					<nav>
 						<ul class="l-list-icons nav-style">
 							<li><a href="#Formations" class="nav-items">Formations</a></li>
@@ -122,114 +122,115 @@
 					</nav>
 				
 				<section id="Formations" class="l-main-section-xs">
-					<h2 class="section-title disco-font"><span class="fas fa-graduation-cap fa-lg section-icons"></span> FORMATIONS</h2>
+					<h2 class="l-section-title disco-font"><span class="fas fa-graduation-cap fa-lg l-section-icons"></span> FORMATIONS</h2>
 					<ul class="fa-ul">
 						<li class="l-list-items">
-							<p class="l-items-date"><span class="fa-li"><span class="far fa-dot-circle section-icons l-dot-xs"></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="far fa-dot-circle l-section-icons l-dot-xs"></span></span>
 							Avril 2019-Aujourd'hui<br/> <em>A domicile</em></p>
 							<div class="l-items-content">
-								<h3 class='section-h section-h3 color-title-content'>Parcours OpenClassRooms Développeur Web</h3>
-								<h4 class="section-h section-h4">Diplôme RNCP de niveau III</h4>
-								<p class="last-p-style "> Formation aux outils de développement dans le cadre de la réalisation de projets professionnels en autonomie.</p>
+								<h3 class='l-section-h section-h3'>Parcours OpenClassRooms Développeur Web</h3>
+								<h4 class="l-section-h section-h4">Diplôme RNCP de niveau III</h4>
+								<p class="last-p-style"> Formation aux outils de développement dans le cadre de la réalisation de projets professionnels en autonomie.<br />
+								Pour chaque projet, on analyse les besoins que l'on transforme en objectifs, à l'aide desquels on planifie les différentes actions requises</p>
 							</div>
 						</li>
 
 						<li class="l-list-items">
-							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle section-icons l-dot-xs size-icons-dot "></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle l-section-icons l-dot-xs size-icons-dot "></span></span>
 							2013-2014<br /><em> Tourcoing</em></p>
 							<div class="l-items-content">
-								<h3 class='section-h section-h3 color-title-content'>Musicien</h3>
-								<h4 class="section-h section-h4">Ecole de Formations aux Métiers de la Musique(EF2M)</h4>
-								<p class="last-p-style ">Formation musicale à un niveau professionnel dans un environnement en conditions réelles</p>
+								<h3 class='l-section-h section-h3'>Musicien</h3>
+								<h4 class="l-section-h section-h4">Ecole de Formations aux Métiers de la Musique(EF2M)</h4>
+								<p class="last-p-style">Formation musicale à un niveau professionnel dans un environnement en conditions réelles</p>
 							</div>
 						</li>
 							
 						<li class="l-list-items">	
-							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle section-icons l-dot-xs size-icons-dot"></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle l-section-icons l-dot-xs size-icons-dot"></span></span>
 							2012-2013<br /><em>Tourcoing</em></p>
 							<div class="l-items-content">
-								<h3 class='section-h section-h3 color-title-content'>Prépa EF2M</h3> 
-								<h4 class="section-h section-h4">Ibanez Guitar Lessons</h4>
+								<h3 class='l-section-h section-h3'>Prépa EF2M</h3> 
+								<h4 class="l-section-h section-h4">Ibanez Guitar Lessons</h4>
 								<p class="last-p-style ">Préparation à l'EF2M</p>	
 							</div>
 						</li>
 
 						<li class="l-list-items">
-							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle section-icons l-dot-xs size-icons-dot"></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle l-section-icons l-dot-xs size-icons-dot"></span></span>
 							2012<br /><em>Lille</em></p>
 							<div class="l-items-content">
-								<h3 class='section-h section-h3 color-title-content'>Baccalauréat Scientifique</h3>
-								<h4 class="section-h section-h4">Lycée Européen Montebello</h4>
+								<h3 class='l-section-h section-h3'>Baccalauréat Scientifique</h3>
+								<h4 class="l-section-h section-h4">Lycée Européen Montebello</h4>
 							</div>
 						</li>
 					</ul>
 				</section>
 
 				<section id="Experiences" class="l-main-section-xs">
-					<h2 class="section-title disco-font "><span class="fas fa-briefcase fa-lg section-icons "></span>EXPERIENCES</h2>
+					<h2 class="l-section-title disco-font "><span class="fas fa-briefcase fa-lg l-section-icons "></span>EXPERIENCES</h2>
 					<ul class="fa-ul">
 						<li class="l-list-items">
-							<p class="l-items-date "><span class="fa-li"><span class="fas fa-circle section-icons l-dot-xs size-icons-dot"></span></span>
+							<p class="l-items-date "><span class="fa-li"><span class="fas fa-circle l-section-icons l-dot-xs size-icons-dot"></span></span>
 							Janvier 2016 - Août 2019<br /><em>Hazebrouck</em></p>
 							<div class="l-items-content">
-								<h3 class='section-h section-h3 color-title-content'>Assistant d’éducation</h3>
-								<h4 class="section-h section-h4 ">Lycée Général des Flandres</h4>
-								<p class="last-p-style "> Gestion administrative, logistique et relationnelle avec les acteurs internes et externes à l'établissement au sein d'une équipe pédagogique</p>
+								<h3 class='l-section-h section-h3'>Assistant d’éducation</h3>
+								<h4 class="l-section-h section-h4">Lycée Général des Flandres</h4>
+								<p class="last-p-style"> Gestion administrative, logistique et relationnelle au sein d'une équipe pédagogique</p>
 							</div>
 						</li>
 
 						<li class="l-list-items">
-							<p  class="l-items-date"><span class="fa-li"><span class="fas fa-circle section-icons l-dot-xs size-icons-dot"></span></span>
+							<p  class="l-items-date"><span class="fa-li"><span class="fas fa-circle l-section-icons l-dot-xs size-icons-dot"></span></span>
 							Septembre 2012 - Février 2015<br /><em>Métropole Lilloise<br class="is-hidden-xs"/> et Hazebrouck</em></p>	
 							<div class="l-items-content">
-								<h3 class='section-h section-h3 color-title-content'>Professeur de guitare</h3>
-								<h4 class="section-h section-h4">à mon compte</h4>
-								<p class="last-p-style "> Exercice d'une relation élève-professeur avec une pédagogie adaptée à l'élève dans un contexte de création de cours et d'exercices, ainsi que dans la résolution de situations problèmatiques.</p>
+								<h3 class='l-section-h section-h3'>Professeur de guitare</h3>
+								<h4 class="l-section-h section-h4">à mon compte</h4>
+								<p class="last-p-style"> Exercice d'une relation élève-professeur avec une pédagogie adaptée à l'élève.</p>
 							</div>
 						</li>
 					</ul>
 				</section>
 
 				<section id="Competences" class="l-main-section-xs">
-					<h2 class="section-title disco-font "><span class="fas fa-drafting-compass fa-lg section-icons"></span>COMPETENCES</h2>
-					<ul class="l-list-icons list-title-style color-title-content ">
-						<li class="l-hardskills-items-xs">
-							<div class="is-hidden-xs"><span class="fab fa-html5 fa-5x section-icons"></span></div>
-							<div class="is-hidden-md"><span class="fab fa-html5 fa-3x section-icons "></span></div>
+					<h2 class="l-section-title disco-font "><span class="fas fa-drafting-compass fa-lg l-section-icons"></span>COMPETENCES</h2>
+					<ul class="l-list-icons list-title-style">
+						<li class="l-hardsklills-items-xs">
+							<div class="is-hidden-xs"><span class="fab fa-html5 fa-5x l-section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fab fa-html5 fa-3x l-section-icons "></span></div>
 							<h3 class="hardskills-hobbies-xs">HTML5</h3>
 						</li>
 						<li class="l-hardskills-items-xs">					
-							<div class="is-hidden-xs"><span class="fab fa-css3-alt fa-5x section-icons"></span></div>
-							<div class="is-hidden-md"><span class="fab fa-css3-alt fa-3x section-icons"></span></div>
+							<div class="is-hidden-xs"><span class="fab fa-css3-alt fa-5x l-section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fab fa-css3-alt fa-3x l-section-icons"></span></div>
 							<h3 class="hardskills-hobbies-xs">CSS3</h3>
 						</li>
 						<li class="l-hardskills-items-xs">					
-							<div class="is-hidden-xs"><span class="fab fa-js-square fa-5x section-icons"></span></div>
-							<div class="is-hidden-md"><span class="fab fa-js-square fa-3x section-icons"></span></div>
+							<div class="is-hidden-xs"><span class="fab fa-js-square fa-5x l-section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fab fa-js-square fa-3x l-section-icons"></span></div>
 							<h3 class="hardskills-hobbies-xs">Javascript</h3>
 						</li>
 						<li class="l-hardskills-items-xs">						
-							<div class="is-hidden-xs"><span class="fab fa-php fa-5x section-icons"></span></div>
-							<div class="is-hidden-md"><span class="fab fa-php fa-3x section-icons"></span></div>
+							<div class="is-hidden-xs"><span class="fab fa-php fa-5x l-section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fab fa-php fa-3x l-section-icons"></span></div>
 							<h3 class="hardskills-hobbies-xs">PHP</h3>
 						</li>
 						<li class="l-hardskills-items-xs">						
-							<div class="is-hidden-xs"><span class="fas fa-database fa-5x section-icons"></span></div>
-							<div class="is-hidden-md"><span class="fas fa-database fa-3x section-icons"></span></div>
+							<div class="is-hidden-xs"><span class="fas fa-database fa-5x l-section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fas fa-database fa-3x l-section-icons"></span></div>
 							<h3 class="hardskills-hobbies-xs">Base de données : SQL</h3>
 						</li>
 						<li class="l-hardskills-items-xs">							
-							<div class="is-hidden-xs"><span class="fab fa-bootstrap fa-5x section-icons"></span></div>
-							<div class="is-hidden-md"><span class="fab fa-bootstrap fa-3x section-icons"></span></div>
+							<div class="is-hidden-xs"><span class="fab fa-bootstrap fa-5x l-section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fab fa-bootstrap fa-3x l-section-icons"></span></div>
 							<h3 class="hardskills-hobbies-xs">Bootstrap 4</h3>
 						</li>
 						<li class="l-hardskills-items-xs">
-							<div class="is-hidden-xs"><span class="fab fa-adobe fa-5x section-icons"></span></div>
-							<div class="is-hidden-md"><span class="fab fa-adobe fa-3x section-icons"></span></div>
+							<div class="is-hidden-xs"><span class="fab fa-adobe fa-5x l-section-icons"></span></div>
+							<div class="is-hidden-md"><span class="fab fa-adobe fa-3x l-section-icons"></span></div>
 							<h3 class="hardskills-hobbies-xs">Indesign, Photoshop</h3>
 						</li>
 					</ul>
-					<ul class="l-list-items l-items-softskills disco-font ">
+					<ul class="l-list-items l-softskills-list disco-font ">
 						<li class="l-softskills-content">Intégrateur</li>
 						<li class="l-softskills-content">Travail en équipe</li>
 						<li class="l-softskills-content">Autonomie</li>
@@ -240,10 +241,25 @@
 						<li class="l-softskills-content">analyse des besoins</li>
 						<li class="l-softskills-content">Déterminer des mesures correctives</li>
 						<li class="l-softskills-content">Méthode Agile</li>
-
-					</ul>
-
 					</ul>					
+				</section>
+
+				<section id="Recommandations" class="l-main-section-xs">
+					<h2 class="l-section-title disco-font "><span class="fas fa-pen fa-lg l-section-icons"></span>RECOMMANDATIONS</h2>
+					<ul class="l-list-items l-list-icons ">
+						<li class="l-recommandations-xs">
+							<h3 class="section-h">MAXIME KIEMAN</h3>
+							<h4 class="section-h">Directeur, Mon entreprise</h4>
+							<p>Téléphone :<br/>
+							Email : name@email.com</p>
+						</li>
+						<li class="l-recommandations-xs">
+							<h3 class="section-h">MAXIME KIEMAN</h3>
+							<h4 class="section-h">Directeur, Mon entreprise</h4>
+							<p>Téléphone :<br/>
+							Email : name@email.com</p>
+						</li>
+					</ul>
 				</section>
 
 				<div class="is-hidden-md last-div-color-xs">
