--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<meta name="twitter:site" content="https://dirmina.github.io" />
 			<meta name="twitter:title" content="Julien Ducrocq Website" />
 			<meta name="twitter:description" content="Julien Ducrocq : Développeur web" />
-			<meta name="twitter:creator" content="@JujuDucr" />
+			<meta name="twitter:creator" content="Julien Ducrocq" />
 			<!-- Twitter Summary card images must be at least 200x200px -->
 			<meta name="twitter:image" content="photocv.png">
 
@@ -28,7 +28,6 @@
 			<meta property="og:description" content="Julien Ducrocq : Développeur web" /> 
 			<meta property="og:site_name" content="Dirmina" />
 			<meta property="fb:admins" content="100008202753841" />
-			<meta property="fb:app-id" content="1446746102165055" /> <!-- App fb ? -->
 
 
 			<script src="https://kit.fontawesome.com/da1309c327.js" crossorigin="anonymous"></script>
@@ -44,28 +43,32 @@
 					</figure>
 					<div class="is-hidden-md l-aside-header-div">
 						<h1 class="l-section-h section-header-h1"><strong>Julien</strong> DUCROCQ</h1>
-						<h2 class="l-section-h section-header-h2"><mark class="mark-xs">Web</mark> Developer</h2>
+						<h2 class="l-section-h section-header-h2"><mark class="mark-xs">Dével</mark>oppeur web freelance</h2>
 					</div>
 				</header>
 
 				
 				<section class="is-hidden-xs" id="Contact">
-					<h2 class="aside-title l-aside-contact-xs">CONTACT</h2>
+					<h2 class="aside-title">CONTACT</h2>
 					<ul>
-						<li class="l-list-icons l-list-contact">	
-							<span class="fas fa-envelope-square fa-2x l-contact-icons aside-icons"></span>
-							<a href="maito:julducrocq@laposte.net">julducrocq@laposte.net</a>
-						</li>
-						<li  class="l-list-icons l-list-contact">
-							<span class="fas fa-map-marker-alt fa-2x l-contact-icons aside-icons"></span>
+						<li  class="l-list-contact">
+							<!--<span class="fas fa-map-marker-alt fa-2x l-contact-icons aside-icons"></span>-->
+							Mon adresse :<br/>
 							Saint-Denis (93)
 						</li>
-						<li class="l-list-icons l-list-contact">
-							<span class="fas fa-mobile-alt fa-2x l-contact-icons aside-icons"></span>
+						<li class="l-list-contact">
+							<!--<span class="fas fa-mobile-alt fa-2x l-contact-icons aside-icons"></span>-->
+							Téléphone : <br/>
 							+33 6 18 50 89 51
 						</li>
-						<li class="l-list-icons l-list-contact">
-							<span class="fab fa-linkedin fa-2x l-contact-icons aside-icons"></span>
+						<li class="l-list-contact">	
+							<!--<span class="fas fa-envelope-square fa-2x l-contact-icons aside-icons"></span>-->
+							Mail :<br/>
+							<a href="maito:julducrocq@laposte.net">julducrocq@laposte.net</a>
+						</li>
+						<li class="l-list-contact">
+							<!--<span class="fab fa-linkedin fa-2x l-contact-icons aside-icons"></span>-->
+							Réseau social :<br/>
 							<a href="https://www.linkedin.com/in/julienducrocq/"> LinkedIn</a>
 						</li>
 					</ul>
@@ -130,8 +133,11 @@
 							<div class="l-items-content">
 								<h3 class='l-section-h section-h3'>Parcours OpenClassRooms Développeur Web</h3>
 								<h4 class="l-section-h section-h4">Diplôme RNCP de niveau III</h4>
-								<p class="last-p-style"> Formation aux outils de développement dans le cadre de la réalisation de projets professionnels en autonomie.<br />
-								Pour chaque projet, on analyse les besoins que l'on transforme en objectifs, à l'aide desquels on planifie les différentes actions requises</p>
+								<p class="last-p-style"> Formation aux outils de développement dans le cadre de la réalisation de projets professionnels en autonomie.<br /></p>
+								<ul class="l-creation">
+									<li>Création d'un CV en ligne responsive en HTML/CSS à partir d'une maquette</li>
+									<li>Création d'un site dynamique responsive avec formulaire de contact pour "Company Name" en HTML/CSS/JS/PHP/SQL à l'aide des frameworks Bootstrap 4 et jQuery.Protection de la base de données, envoi d'email personnalisé.</li>
+								</ul>
 							</div>
 						</li>
 
@@ -265,7 +271,7 @@
 				<div class="is-hidden-md last-div-color-xs">
 				<section id="Contact-xs">
 						<h2 class="aside-title aside-contact-xs">CONTACT</h2>
-						<ul class="contact-xs">
+						<!--<ul class="contact-xs">
 							<li class="l-list-icons l-list-contact">	
 								<span class="fas fa-envelope-square fa-2x l-contact-icons aside-icons"></span>
 								<a href="maito:julducrocq@laposte.net" class="">julducrocq@laposte.net</a>
@@ -278,7 +284,29 @@
 								<span class="fas fa-mobile-alt fa-2x l-contact-icons aside-icons"></span>
 								+33 6 18 50 89 51
 							</li>
-						</ul>
+						</ul> -->
+						<ul class="contact-xs l-contact-xs">
+							<li  class="l-list-contact">
+								<!--<span class="fas fa-map-marker-alt fa-2x l-contact-icons aside-icons"></span>-->
+								Mon adresse :<br/>
+								Saint-Denis (93)
+							</li>
+							<li class="l-list-contact">
+								<!--<span class="fas fa-mobile-alt fa-2x l-contact-icons aside-icons"></span>-->
+								Téléphone : <br/>
+								+33 6 18 50 89 51
+							</li>
+							<li class="l-list-contact">	
+								<!--<span class="fas fa-envelope-square fa-2x l-contact-icons aside-icons"></span>-->
+								Mail :<br/>
+								<a href="maito:julducrocq@laposte.net">julducrocq@laposte.net</a>
+							</li>
+							<li class="l-list-contact">
+								<!--<span class="fab fa-linkedin fa-2x l-contact-icons aside-icons"></span>-->
+								Réseau social :<br/>
+								<a href="https://www.linkedin.com/in/julienducrocq/"> LinkedIn</a>
+							</li>
+					</ul>
 					</section>
 						
 					<section class="l-aside-about" id="About-xs">
