ajout de la disponibilité

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<script src="https://kit.fontawesome.com/da1309c327.js" crossorigin="anonymous"></script>
 
-			<title>Julien DUCROCQ, Web Developer</title>
+			<title>Julien DUCROCQ, développeur web freelance</title>
 		</head>
 
 		<body>
@@ -44,6 +44,7 @@
 					<div class="is-hidden-md l-aside-header-div">
 						<h1 class="l-section-h section-header-h1"><strong>Julien</strong> DUCROCQ</h1>
 						<h2 class="l-section-h section-header-h2"><mark class="mark-xs">Dével</mark>oppeur web freelance</h2>
+						<p>Disponible ASAP</p>
 					</div>
 				</header>
 
@@ -101,6 +102,7 @@
 				<header class="l-header-section is-hidden-xs">
 					<h1 class="l-section-h section-header-h1"><strong>Julien</strong> DUCROCQ</h1>
 					<h2 class="l-section-h section-header-h2"><mark>Dével</mark>oppeur web freelance</h2>
+					<p>Disponible ASAP</p>
 					<nav>
 						<ul class="l-list-icons nav-style">
 							<li><a href="#Formations" class="nav-items">Formations</a></li>
