size disponibilite, contact align, MQ phone placement puce essai n°2

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<div class="is-hidden-md l-aside-header-div">
 						<h1 class="l-section-h section-header-h1"><strong>Julien</strong> DUCROCQ</h1>
 						<h2 class="l-section-h section-header-h2"><mark class="mark-xs">Dével</mark>oppeur web freelance</h2>
-						<p>Disponible ASAP</p>
+						<p class="disponibilite-xs">Disponible ASAP</p>
 					</div>
 				</header>
 
