MQ phone placement puce

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<div class="is-hidden-md l-aside-header-div">
 						<h1 class="l-section-h section-header-h1"><strong>Julien</strong> DUCROCQ</h1>
 						<h2 class="l-section-h section-header-h2"><mark class="mark-xs">Dével</mark>oppeur web freelance</h2>
-						<p class="disponibilite">Disponible ASAP</p>
+						<p class="disponibilite-xs">Disponible ASAP</p>
 					</div>
 				</header>
 
@@ -144,7 +144,7 @@
 						</li>
 
 						<li class="l-list-items">
-							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle l-section-icons l-dot-xs size-icons-dot "></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle l-section-icons l-dot-xs size-icons-dot"></span></span>
 							2013-2014<br /><em> Tourcoing</em></p>
 							<div class="l-items-content">
 								<h3 class='l-section-h section-h3'>Musicien</h3>
