mesures correctives : Layout&Mod MQ softskills, fontsize MQ dispo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<div class="is-hidden-md l-aside-header-titles">
 						<h1 class="section-h section-header-h1"><strong>Julien</strong> DUCROCQ</h1>
 						<h2 class="section-h section-header-h2"><mark class="mark-xs">Dével</mark>oppeur web freelance</h2>
-						<p>Disponible ASAP</p>
+						<p class="disponibilite-xs">Disponible ASAP</p>
 					</div>
 				</header>
 
@@ -271,15 +271,15 @@
 					</ul>
 					<ul class="l-softskills-list disco-font "> <!-- l-softskills-list : be careful - is extended by l-list-items -->
 						<li class="softskills">Intégrateur</li>
-						<li class="softskills">Travail en équipe</li>
-						<li class="softskills">Autonomie</li>
-						<li class="softskills">Rigueur</li>
-						<li class="softskills">Pédagogie</li>
-						<li class="softskills">Anglais: courant</li>
 						<li class="softskills">Gestion de projet</li>
 						<li class="softskills">analyse des besoins</li>
 						<li class="softskills">Déterminer des mesures correctives</li>
 						<li class="softskills">Méthode Agile</li>
+						<li class="softskills">Travail en équipe</li>
+						<li class="softskills">Autonomie</li>
+						<li class="softskills">Rigueur</li>
+						<li class="softskills">Pédagogie</li>
+						<li class="softskills">Anglais: courant</li>	
 					</ul>					
 				</section>
 
