mesure corrective : puce décalé MQphone deplacement sur le 1st span

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						</li>
 
 						<li class="l-list-items">
-							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle icons l-dot-xs size-icons-dot "></span></span>
+							<p class="l-items-date"><span class="l-dot-xs fa-li"><span class="fas fa-circle icons size-icons-dot "></span></span>
 							2013-2014<br /><em> Tourcoing</em></p>
 							<div class="l-items-content">
 								<h3 class='section-h section-h3'>Musicien</h3>
