--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					<h2 class="l-section-title disco-font"><span class="fas fa-graduation-cap fa-lg icons"></span> FORMATIONS</h2>
 					<ul class="fa-ul">
 						<li class="l-list-items">
-							<p class="l-items-date"><span class="fa-li"><span class="far fa-dot-circle icons"></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="far fa-dot-circle l-dot-xs icons"></span></span>
 							Avril 2019-Aujourd'hui<br/> <em>A domicile</em></p>
 							<div class="l-items-content">
 								<h3 class='section-h section-h3'>Parcours OpenClassRooms Développeur Web</h3>
@@ -140,7 +140,7 @@
 						</li>
 
 						<li class="l-list-items">
-							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle icons size-icons-dot "></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle icons l-dot-xs size-icons-dot "></span></span>
 							2013-2014<br /><em> Tourcoing</em></p>
 							<div class="l-items-content">
 								<h3 class='section-h section-h3'>Musicien</h3>
@@ -150,7 +150,7 @@
 						</li>
 							
 						<li class="l-list-items">	
-							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle icons size-icons-dot"></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle icons l-dot-xs size-icons-dot"></span></span>
 							2012-2013<br /><em>Tourcoing</em></p>
 							<div class="l-items-content">
 								<h3 class='section-h section-h3'>Prépa EF2M</h3> 
@@ -160,7 +160,7 @@
 						</li>
 
 						<li class="l-list-items">
-							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle icons size-icons-dot"></span></span>
+							<p class="l-items-date"><span class="fa-li"><span class="fas fa-circle icons l-dot-xs size-icons-dot"></span></span>
 							2012<br /><em>Lille</em></p>
 							<div class="l-items-content">
 								<h3 class='section-h section-h3'>Baccalauréat Scientifique</h3>
@@ -174,7 +174,7 @@
 					<h2 class="l-section-title disco-font "><span class="fas fa-briefcase fa-lg icons "></span>EXPERIENCES</h2>
 					<ul class="fa-ul">
 						<li class="l-list-items">
-							<p class="l-items-date "><span class="fa-li"><span class="fas fa-circle icons size-icons-dot"></span></span>
+							<p class="l-items-date "><span class="fa-li"><span class="fas fa-circle icons l-dot-xs size-icons-dot"></span></span>
 							Janvier 2016 - Août 2019<br /><em>Hazebrouck</em></p>
 							<div class="l-items-content">
 								<h3 class='section-h section-h3'>Assistant d’éducation</h3>
@@ -184,7 +184,7 @@
 						</li>
 
 						<li class="l-list-items">
-							<p  class="l-items-date"><span class="fa-li"><span class="fas fa-circle icons size-icons-dot"></span></span>
+							<p  class="l-items-date"><span class="fa-li"><span class="fas fa-circle icons l-dot-xs size-icons-dot"></span></span>
 							Septembre 2012 - Février 2015<br /><em>Métropole Lilloise<br class="is-hidden-xs"/> et Hazebrouck</em></p>	
 							<div class="l-items-content">
 								<h3 class='section-h section-h3'>Professeur de guitare</h3>
