--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<ul class="fa-ul">
 						<li class="l-list-items">
 							<p class="l-items-date"><span class="fa-li"><span class="far fa-dot-circle l-dot-xs icons"></span></span>
-							Avril 2019-Aujourd'hui<br/> <em>A domicile</em></p>
+							Avril 2019-Janvier 2020<br/> <em>A domicile</em></p>
 							<div class="l-items-content">
 								<h3 class='section-h section-h3'>Parcours OpenClassRooms Développeur Web</h3>
 								<h4 class="section-h section-h4">Diplôme RNCP de niveau III</h4>
