v 1.0 : ajout du lien mail

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 							</li>
 							<li class="list-contact">	
 								Mail :<br/>
-								<a href="maito:julducrocq@laposte.net">julducrocq@laposte.net</a>
+								<a href="mailto:julducrocq@laposte.net">julducrocq@laposte.net</a>
 							</li>
 							<li class="list-contact">
 								Réseau social :<br/>
