ajout du projet ohmyfood et d'une section projet

--- a/index.html
+++ b/index.html
@@ -283,6 +283,14 @@
 					</ul>					
 				</section>
 
+				<section id="Projets" class="l-main-section-xs">
+					<h2 class="l-section-title disco-font"><span class="fas fa-graduation-cap fa-lg icons"></span> PROJETS</h2>
+					<ul class="fa-ul">
+						<li class="l-list-items">
+							<a href="./projets/ohmyfood/index.html" class="ohmyfood__link"><article class="ohmyfood"><h1 class="ohmyfood__title">OhMyFood</h1></article></a>
+						</li>
+					</ul>
+
 				<section id="Recommandations" class="l-main-section-xs">
 					<h2 class="l-section-title disco-font "><span class="fas fa-pen fa-lg icons"></span>RECOMMANDATIONS</h2>
 					<ul class="l-list-items l-list-recommendations">
